--- a/BearBot.Web/packages.config
+++ b/BearBot.Web/packages.config
@@ -1,9 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="3.3.1" targetFramework="net451" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net451" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
+  <package id="Metrics.NET" version="0.3.7" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net451" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
+  <package id="Microsoft_Composite_library_package" version="1.0.0" targetFramework="net451" />
+  <package id="Quartz" version="2.4.1" targetFramework="net451" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.24.0.0" targetFramework="net451" />
+  <package id="Unity" version="4.0.1" targetFramework="net451" />
+  <package id="Unity.Mvc" version="4.0.1" targetFramework="net451" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net451" />
 </packages>
