--- a/BearBot.Web/Web.config
+++ b/BearBot.Web/Web.config
@@ -9,7 +9,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="botInterval"  value="30" />
+    <add key="botInterval" value="30" />
+    <add key="dbUser" value="bearbot" />
+    <add key="dbPass" value="bearbot" />
+    <add key="dbName" value="bearsbot" />
+    <add key="dbHost" value="localhost" />
+    <add key="dbPort" value="5432" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
