--- a/BearBot.Infrastructure/packages.config
+++ b/BearBot.Infrastructure/packages.config
@@ -12,6 +12,7 @@
   <package id="nbehave" version="0.6.2" targetFramework="net451" />
   <package id="nbehave.runners" version="0.6.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
+  <package id="Npgsql" version="3.1.8" targetFramework="net451" />
   <package id="NUnit" version="3.5.0" targetFramework="net451" />
   <package id="NUnit.Console" version="3.4.1" targetFramework="net451" />
   <package id="NUnit.ConsoleRunner" version="3.4.1" targetFramework="net451" />
